--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 body {
   background: #d8b2b2 !important;
+  height: 100%;
 }
 
 .ant-layout-header {
@@ -10,12 +11,13 @@ body {
 
 .ant-layout-content {
   background: #d8b2b2;
-  height: 800px;
+  height: 500px;
 }
 
 .ant-layout-sider {
   background: #a34646 !important;
   font-size: 28px;
+  height: 950px;
   width: 350px !important;
   max-width: 500px !important;
   flex: 0 0 350px !important;
@@ -35,4 +37,8 @@ body {
 
 .ant-layout-footer {
   background: #ead6d6 !important;
+}
+
+.button {
+  margin: 10px;
 }
